/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Interface.java to edit this template
 */
package csd230.lab1.VictorFelipe.pojos;

/**
 *
 * @author fcarella
 */
public interface SaleableItem {

    public void sellItem();
    public double getPrice();
}
